--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "propaganistas/laravel-phone": "^5.3"
+        "lcobucci/jwt": "^5.3",
+        "propaganistas/laravel-phone": "^5.3",
+        "syamsoul/laravel-set-env": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
