--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "lcobucci/clock": "*",
         "lcobucci/jwt": "^5.3",
         "propaganistas/laravel-phone": "^5.3",
+        "spatie/laravel-query-builder": "^6.0",
         "spatie/laravel-sluggable": "^3.6",
         "syamsoul/laravel-set-env": "*"
     },
